@@ -1,5 +1,6 @@
 0.8.0
-* xis: new word: xis+remove-parameters (2010-03-18)
+* xis: new word: xis+dump-read-parameters (2010-03-21)
+* xis: new word: xis+remove-read-parameters (2010-03-18)
 * fwt: new module: fixed width types (2010-01-16)
 * VFXForth: config.fs/make.fs added (2009-12-21, thanks to Stephen)
 * dbm: new module: gdbm interface (2009-10-03)
